# stm32bs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: e2e-test.yml  release-binary-assets.yml  release.yml
example-templates/arrays/: stm32bs.toml
example-templates/hooks/: stm32bs.toml
example-templates/many-hooks-in-action/: stm32bs.toml
example-templates/placeholders/: stm32bs.toml
example-templates/text-placeholder/: stm32bs.toml
src/: app_log.rs  args.rs  config.rs  interactive.rs  main.rs  project_config.rs  project_variables.rs  template.rs  template_config.rs  template_filters.rs  user_parsed_input.rs  utils.rs
src/database/: cpn.rs  mod.rs  resource.rs
src/git/: clone_tool.rs  gitconfig.rs  mod.rs  utils.rs
src/hooks/: context.rs  env_mod.rs  file_mod.rs  mod.rs  system_mod.rs  variable_mod.rs
src/stm32_device/: chip_info.rs  chip_pn.rs  device_list.rs  mod.rs  pac.rs  read_csv.rs
src/template_variables/: mod.rs  project_dir.rs  project_name.rs
tests/integration/: basics.rs  demo.rs  git.rs  git_instead_of.rs  main.rs  project_name.rs  public_api.rs  template_filters.rs
tests/integration/config_file/: mod.rs
tests/integration/helpers/: arg_builder.rs  mod.rs  prelude.rs  project_builder.rs
tests/integration/template_config_file/: includes.rs  misc.rs  mod.rs
www/: Cargo.toml  README.md  memory.x
www/.cargo/: config.toml
www/src/: main.rs
