[package]
name = "cargo-stm32bs"
description = "STM32bs, to create a stm32 project!"
version = "0.0.2"
authors = ["Atlas Song Kai"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AtlasHW/stm32bs"
edition = "2021"
include = ["src/**/*", "LICENSE-*", "*.md"]

[dependencies.git2]
default-features = false
features = ["ssh", "https"]
version = "~0.20"

[dependencies]
anstyle = "~1.0"
anyhow = "1.0.98"
auth-git2 = "~0.5"
clap = { version = "~4.5", features = ["derive", "wrap_help"] }
console = "~0.15"
dialoguer = "~0.11"
env_logger = "~0.11"
gix-config = "~0.44"
heck = "~0.5"
home = "~0.5"
indexmap = { version = "~2", features = ["serde"] }
indicatif = "~0.17"
liquid = "~0.26"
liquid-core = "~0.26"
liquid-derive = "~0.26"
liquid-lib = "~0.26"
log = "~0.4"
openssl = { version = "~0.10", optional = true }
paste = "~1.0"
remove_dir_all = "~1.0"
semver = { version = "~1.0", features = ["serde"] }
serde = { version = "~1.0", features = ["derive"] }
tempfile = "~3.19"
thiserror = "~2.0"
toml = { version = "~0.8", features = ["preserve_order"] }
regex = "1.11.1"
csv = "1.3.1"

[dev-dependencies]
assert_cmd = "~2.0"
bstr = "~1.11"
indoc = "~2.0"
predicates = "~3.1"
url = "~2.5"

[features]
default = ["vendored-libgit2"]
vendored-libgit2 = ["git2/vendored-libgit2"]
vendored-openssl = ["openssl/vendored", "git2/vendored-openssl"]

[[bin]]
path = "src/main.rs"
name = "cargo-stm32bs"

[profile.release]
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(e2e_tests_with_ssh_key)',
] }
